# neuralnet

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/classes/: layer.cpp  layer.hpp  neural.cpp  neural.hpp  project_paths.hpp  utils.cpp  utils.hpp  visualize.hpp
src/saved_models/: model.txt  model_sigmoid_89percent.txt
